--- a/.github/workflows/develop-cicd.yml
+++ b/.github/workflows/develop-cicd.yml
@@ -44,5 +44,5 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/mlops-rare-disease:latest
-            ghcr.io/${{ github.repository_owner }}/mlops-rare-disease:${{ github.sha }}
+            ghcr.io/danielgm93/mlops-rare-disease:latest
+            ghcr.io/danielgm93/mlops-rare-disease:${{ github.sha }}
