fix: corregir expresión de tags en workflow de CI/CD

--- a/.github/workflows/develop-cicd.yml
+++ b/.github/workflows/develop-cicd.yml
@@ -45,5 +45,5 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner | toLower }}/mlops-rare-disease:latest
-            ghcr.io/${{ github.repository_owner | toLower }}/mlops-rare-disease:${{ github.sha }}
+            ghcr.io/danielgm93/mlops-rare-disease:latest
+            ghcr.io/danielgm93/mlops-rare-disease:${{ github.sha }}
